<resources>
    <string name="app_name" translatable="false">Books Board</string>
    <!--Common-->
    <string name="empty_text_field">Fill in the required fields</string>
    <string name="false_email_password">Email or password is incorrect</string>

    <!--Content Description-->
    <string name="cd_app_icon">App Icon</string>
    <string name="cd_gradient">Color Gradient</string>
    <string name="cd_favorite_icon">Favorite İcon</string>
    <string name="cd_book_cover">Book Cover</string>
    <string name="cd_back_btn">Back Button</string>
    <string name="cd_book_title_detail_background">Title Background</string>
    <string name="cd_add_book_btn">Add Book Button</string>
    <string name="cd_add_button_image">Book image add</string>
    <string name="cd_book_cover_preview">Book cover preview</string>


    <!--OnBoarding-->
    <string name="onboarding_description">It is a small library where\nyou can record the topics of your books and filter by genre.</string>
    <string name="onboarding_btn">Lets Have a Look at the Application</string>

    <!--Login-->
    <string name="email" translatable="false">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_account">Leave Session Open</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="register">Register</string>

    <!--Register-->
    <string name="gender">Gender</string>
    <string name="lady">Lady</string>
    <string name="gentleman">Gentleman</string>
    <string name="nick_name">Nick Name</string>
    <string name="security_password">Security Password</string>

    <!--Forgot Password-->
    <string name="forgot_password_helper">Your security password is the password you entered when registering.</string>
    <string name="reset_password_tv">Reset Password</string>
    <string name="send_email_link">Password recovery mail has been sent</string>

    <string name="library">Library</string>
    <string name="favorite">Favorite</string>
    <string name="page_icon">Number Of Pages</string>
    <string name="book_cover">Book Cover</string>

    <!--Mock Data Description-->
    <string name="book">Although politics was known as the art of arranging and conducting state affairs, many tactics and games lay on the ground of this art… It was an art of persuasion when appropriate, and a sharp sword when appropriate. A lot of blood has been shed, a lot of lives have been burned. In short, politics was a sophisticated art in the Seljuk era. This book was written in order to teach this art to statesmen and to give them the ability to manage the state.</string>
    <string name="book_1">Imagine that a great tribe has traveled thousands of kilometers in three centuries… What does this do if it doesn t change the world? This is how the Turks changed the world. For this reason, we do not need to produce an imaginary history and heroes, but only to learn the truth.</string>
    <string name="book_2">Be brave. Open windows outside the area where you feel comfortable. This is how you meet different worlds. I wouldn\'t be who you know today if I hadn\'t always stood my ground, looking for the people who would change my world. The moment a person is finished is when he is a prisoner of sluggishness. One should be willing to give up their comfort. He must move his own world.</string>
    <string name="book_3">Psychology professor Richard Wiseman exposes the dirty laundry of today\'s modern myths imposed by the self-help industry and offers a new approach to helping people achieve their goals and passions in minutes, not months. From mood to memory, from persuasion to procrastination, and from resilience to relationships, Wiseman outlines the research that supports this new science of rapid change and describes how these fast and interesting techniques can be brought into harmony with everyday life.</string>
    <string name="book_4">The interest in TED conferences, named after the initials of the words Technology, Entertainment and Design, continues to increase all over the world. Known with the slogan "ideas worth sharing", his 18-minute TED talks that had such an impact on people were viewed more than 4 billion times on the Internet.</string>
    <string name="book_5">!There is a story told about successful people; They are said to be intelligent and ambitious. In Outliers, Malcolm Gladwell argues that the true story of success is very different from that, and that to understand why some people succeed, we need to look more carefully around them. For example, their families, places of birth and even dates of birth… The story of success is more complex and much more interesting than it seems at first…</string>

    <!--Mock Data Sub Title-->
    <string name="sub_title">Siyaru l-mulk, or Siyeru l-mulk, is a work on politics written by Nizamülmülk.</string>
    <string name="sub_title_1">Imagine that a great tribe traveled thousands of kilometers in three centuries.</string>
    <string name="sub_title_2">Be brave. Open windows outside of your comfort zone</string>
    <string name="sub_title_3">Psychology professor Richard Wiseman reveals the dirty laundry of today\'s modern myths imposed by the self-help industry</string>
    <string name="sub_title_4">The interest in TED conferences, named after the initials of the words Technology, Entertainment and Design, continues to increase all over the world. Known as "Ideas worth sharing"</string>
    <string name="sub_title_5">!There is a story told about successful people; they are said to be intelligent and ambitious</string>

    <!--Adapter item-->
    <string name="pages_size">%d Pages</string>

    <!--Category Filter-->
    <string name="category_history">History</string>
    <string name="category_sociology">Sociology</string>
    <string name="category_self_improvement">Self Improvement</string>

    <!--Book Detail-->
    <string name="detail_background">Detail Background</string>
    <string name="book_detail_rating">%d\nRating</string>
    <string name="book_detail_language">%s\nLanguage</string>
    <string name="book_detail_page">%d\nPages</string>

    <!--Favorite Fragment-->
    <string name="empty_list">Visit the Library to add a favorite book.</string>

    <!--Search Hint-->
    <string name="search_hint">Book Name</string>

    <!--Add Book-->
    <string name="add_book_btn">Add</string>
    <string name="add_book_name">Book Name</string>
    <string name="add_sub_title">Sub Title</string>
    <string name="add_book_rating">Rating</string>
    <string name="add_book_pages">Number of pages</string>
    <string name="add_book_language">Spelling language</string>
    <string name="add_book_cover">Picture of the book</string>
    <string name="add_book_description">Book Description</string>
    <string name="add_book_category">Choose a category</string>
    <string name="add_book_no_gallery_permission">No gallery permission</string>

</resources>