<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.LoginFragment">


    <ImageView
        android:id="@+id/login_app_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/cd_app_icon"
        android:background="@drawable/books"
        app:layout_constraintBottom_toBottomOf="@+id/login_app_name"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/login_app_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/login_start_horizontal"
        app:layout_constraintStart_toStartOf="@id/login_start_horizontal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:textSize="@dimen/title_size"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/login_end_horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/login_app_icon"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_eposta_til"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:minWidth="@dimen/min_width_et"
        android:maxWidth="@dimen/max_width_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toTopOf="@+id/login_vertical"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_eposta_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_til"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:minWidth="@dimen/min_width_et"
        android:maxWidth="@dimen/max_width_et"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_eposta_til"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_start_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_end_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.30864197" />

    <CheckBox
        android:id="@+id/login_remember_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:text="@string/remember_account"
        app:layout_constraintStart_toStartOf="@+id/login_password_til"
        app:layout_constraintTop_toBottomOf="@+id/login_password_til" />

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:gravity="end"
        android:paddingHorizontal="8dp"
        android:text="@string/forgot_password"
        app:layout_constraintBottom_toBottomOf="@+id/login_remember_account"
        app:layout_constraintEnd_toEndOf="@+id/login_password_til"
        app:layout_constraintStart_toEndOf="@+id/login_remember_account"
        app:layout_constraintTop_toBottomOf="@+id/login_password_til" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:textAllCaps="false"
        android:paddingVertical="@dimen/padding_8"
        android:paddingHorizontal="@dimen/padding_24"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_16"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintBottom_toTopOf="@+id/login_to_register_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/login_remember_account" />

    <TextView
        android:id="@+id/login_to_register_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        app:layout_constraintEnd_toEndOf="@id/login_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        android:text="@string/register" />
</androidx.constraintlayout.widget.ConstraintLayout>